--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Travigo - Travel for everyone</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
+	<meta name="description" content="We care about the best travel experience for our clients from all over the world. These guides meet tourists at the airport, take the buses and take.">
+  	<meta name="keywords" content="travigo , travel , visit , trip , travigo travel , dubai , Now York , Giza , Quatar , Morroco , paris , london , 
+	 turky , hotels , flights , travelocity , vacation , plane tickets , travel agency , airfare , fare , cheap airfare , destination , one travel , package , travel channel , 
+		travel news , budget travel , last minute travel , travel sites">
 	<link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
